tests/snapshots/integration__integration_tests__merge__merge_pre_merge_check_success.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mRunning pre-merge check 'cmd'...[0m
🔄 [36mRebasing onto [1m[36mmain[0m...[0m
🔄 [36mPushing 1 commit to [1m[36mmain[0m @ [SHA][0m

* [33m8c7e1b3[m[33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Add feature file

 feature.txt | 1 [32m+[m
 1 file changed, 1 insertion(+)

✅ [32mPushed to [1m[32mmain[0m (1 commit, 1 file, [32m+1[0m)  [0m
🔄 [36mCleaning up worktree...[0m
✅ [32mRemoved worktree and returned to primary[0m
  [2mPath: [REPO][0m

To enable automatic cd, run: wt configure-shell

✅ [32mMerge complete[0m

  [2mMerged: [1m[32mfeature[0m → [1m[32mmain[0m[0m
  [2mWorktree: Removed[0m

----- stderr -----
