tests/snapshots/integration__integration_tests__merge__merge_pre_merge_command_combined_output.snap
---
source: tests/integration_tests/merge.rs
expression: output
---
Exit code: 0
🔄 [36mRunning pre-merge: [1mfirst[0m[0m
[40m [0m  [1m[34mecho[0m [32m'STDOUT-FROM-FIRST'[0m [36m&&[0m [1m[34mecho[0m [32m'STDERR-FROM-FIRST'[0m >&2[0m

[0mSTDOUT-FROM-FIRST
STDERR-FROM-FIRST
🔄 [36mRunning pre-merge: [1msecond[0m[0m
[40m [0m  [1m[34mecho[0m [32m'STDOUT-FROM-SECOND'[0m [36m&&[0m [1m[34mecho[0m [32m'STDERR-FROM-SECOND'[0m >&2[0m

[0mSTDOUT-FROM-SECOND
STDERR-FROM-SECOND
🔄 [36mMerging 1 commit to [1m[36mmain[0m @ [2m[SHA][0m (no commit/squash/rebase needed)

* [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Add feature file

 feature.txt | 1 [32m+[m
 1 file changed, 1 insertion(+)

✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 1 file, [32m+1[0m)
🔄 [36mCleaning up worktree...[0m
✅ [32mReturned to primary at [1m[32m[REPO][0m[0m
